--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,11 @@
     "declarationMap": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "lib": ["ES2015", "ES2017", "ES2020", "DOM"],
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "skipLibCheck": true,
     "strict": true,
-    "target": "ES6"
+    "target": "ES2017"
   }
 }
